# Journal

./: .env  .gitignore  .gitmessage.txt  README.md  main.py  pyproject.toml  report.html  test.sh  test.sqlite3-shm  test.sqlite3-wal
app/: main.py
app/api/routers/: auth.py  bookmark.py  diary_api.py  question.py  quote.py  user.py
app/api/v1/: quote.py
app/core/: config.py  security.py
app/db/: base.py
app/models/: auth.py  bookmark.py  diary.py  question.py  quote.py  user.py  user_question.py
app/repositories/: quote_repo.py
app/routers/: diary_api.py
app/schemas/: diary.py  quote.py  user.py
app/scraping/: quote_scraper.py  test_scrap.py
app/services/: auth.py  bookmark_service.py  diary_crud.py  question_service.py  quote_service.py  user.py
migrations/models/: 0_20260311160258_init.py
tests/: quote_test.py
