[project]
name = "journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.3.0",
    "fastapi[standard]>=0.135.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pwdlib>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.15.5",
    "tortoise-orm[asyncpg]>=1.1.6",
]

[dependency-groups]
dev = [
    "aerich[toml]>=0.8.1",
    "black>=26.3.0",
    "ruff>=0.15.5",
]

[tool.aerich]
tortoise_orm = "app.db.base.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
